# internal/core/domain/models/model.go
@@ -1,5 +1,9 @@
 package models
 
+import (
+	"github.com/dgrijalva/jwt-go"
+)
+
 type RegisterDTO struct {
 	Login    string `json:"login" binding:"required"`
 	Password string `json:"password" binding:"required"`
@@ -33,4 +37,25 @@ type User struct {
 type Role struct {
 	Id   string
 	Name string
+}
+
+type TokenClaims struct {
+	Login string   `json:"login"`
+	Roles []string `json:"roles"`
+	jwt.StandardClaims
+}
+
+type DownloadFileDTO struct {
+	Login    string `json:"login" binding:"required"`
+	FileName string `json:"file-name" binding:"required"`
+	Path     string `json:"path" binding:"required"`
+}
+
+type DeleteFileDTO struct {
+	Login    string `json:"login" binding:"required"`
+	FileName string `json:"file-name" binding:"required"`
+}
+
+type GetFileListDTO struct {
+	Login string `json:"login" binding:"required"`
 }
